# lox-lang

./: .gitignore  CMakeLists.txt  LICENSE  compile.sh  lox.cpp  main.cpp  output.ll  run.sh  vm.cpp
include/: AstPrinter.hpp  BuiltInClass.hpp  BuiltInFun.hpp  BuiltInIo.hpp  Environment.hpp  Expr.hpp  IRgenerator.hpp  Interpreter.hpp  Logger.hpp  LoxCallable.hpp  LoxClass.hpp  LoxFunction.hpp  LoxInstance.hpp  LoxList.hpp  Object.hpp  Parser.hpp  Resolver.hpp  RuntimeError.hpp  RuntimeException.hpp  Scanner.hpp  Stmt.hpp  Token.hpp  lox.hpp  vm.hpp
src/builtins/: BuiltInClass.cpp  BuiltInFun.cpp  BuiltInIo.cpp
src/internals/: LoxClass.cpp  LoxFunction.cpp  LoxInstance.cpp  LoxList.cpp
src/interpreter/: CMakeLists.txt  Interpreter.cpp  Resolver.cpp
src/irgenerator/: IRgenerator.cpp
src/lexer/: CMakeLists.txt  Scanner.cpp  Token.cpp
src/logger/: CMakeLists.txt  Logger.cpp
src/parser/: CMakeLists.txt  Parser.cpp
src/utils/: AstPrinter.cpp  Environment.cpp  Object.cpp
